Implemented client part for performing commands
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%408

--- a/war/sametimed.html
+++ b/war/sametimed.html
@@ -9,6 +9,7 @@
     <title>sametimed</title>
     
     <script type="text/javascript" src="ajax.js"></script>
+    <script type="text/javascript" src="command.js"></script>
     
     <!-- load GWT compiled module -->
     <script type="text/javascript" src="same_timed/same_timed.nocache.js"></script>
