refactored js files to use inheritance, modules are now rendered separately
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4081

--- a/WebContent/sametimed.html
+++ b/WebContent/sametimed.html
@@ -21,6 +21,14 @@
     <script type="text/javascript">
          $(document).ready(function(){
              dwr.engine.setActiveReverseAjax(true);
+             clientRenderer = new ClientRenderer({
+                 	modules: { 'chat': { renderAfter: 'users', 
+                           			     renderer: new ChatBoxRenderer() },
+                     	       'document': { renderAfter: 'errors', 
+       	                                     renderer: new EditorBoxRenderer(),
+       	                                     styleClass: 'editor' }
+             				 }
+             	});
          });    
     </script>
     
