extracted modules renderers from js file

--- a/WebContent/sametimed.html
+++ b/WebContent/sametimed.html
@@ -12,9 +12,10 @@
     <script type="text/javascript" src="jquery.json-2.2.min.js"></script>
     <script type="text/javascript" src="jquery.inherit-1.0.9.js"></script>
         
-    <script type="text/javascript" src="editor.js"></script>
     <script type="text/javascript" src="command.js"></script>    
     <script type="text/javascript" src="ui.js"></script>
+    <script type="text/javascript" src="module-chat.js"></script>
+    <script type="text/javascript" src="module-editor.js"></script>
     
     <script type="text/javascript" src="dwr/engine.js"></script>    
 
