beginning cometd channels implementation

--- a/WebContent/sametimed.html
+++ b/WebContent/sametimed.html
@@ -31,7 +31,7 @@
         var cometd = $.cometd;
     
         $(document).ready(function(){
-        	cometd.configure({ url: '/cometd' });            
+        	initSametimed();            
         });
     </script>
     
