Configuration is correctly loaded at server side, passed to client,

--- a/WebContent/sametimed.html
+++ b/WebContent/sametimed.html
@@ -31,10 +31,8 @@
     
     <script type="text/javascript">
         $(document).ready(function(){
-        	sametimed.init({
-            	cometdURL: '/sametimed/cometd'
-        	});          
-        }); // TODO: load configuration from sametimed.xml
+        	sametimed.init();          
+        });
     </script>
     
     <link type="text/css" rel="stylesheet" href="css/page.css" />
